syntax = "proto3";

option java_package = "com.example.lusonus.data.dataclasses.proto";
option java_multiple_files = true;

import "media.proto";

message FolderProto {
  string name = 1;
  string uri = 2;
  string dateAdded = 3;
  string lastPlayed = 4;
  repeated MediaProto mediaItems = 5;
}

message FolderLibraryProto {
  repeated FolderProto folders = 1;
}
